--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --coverage",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.2.0"
+    "jest": "^27.2.0",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "cors": "^2.8.5",
