--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Install dependencies"
+          command: "npm install"
+      - run:
+          name: "Install jest"
+          command: "npm test"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
